--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
 enable-magisk-update = true # set this to false if you do not want to receive updates for the module in magisk app
+patches-source = "MorpheApp/morphe-patches"
+rv-brand = "MorpheApp"
 parallel-jobs = 1
 
 # add 'enabled = false' for not patching a specific app or remove it from the config
@@ -9,19 +11,11 @@ parallel-jobs = 1
 [Music]
 app-name = "Music"
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
-patches-source = "MorpheApp/morphe-patches"
-cli-source = "MorpheApp/morphe-cli"
-integrations-source = "MorpheApp/revanced-integrations"
-rv-brand = "MorpheApp ReVanced"
 arch = "arm64-v8a"
 build-mode = "module"
 
 [YouTube]
 app-name = "YouTube"
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
-patches-source = "MorpheApp/morphe-patches"
-cli-source = "MorpheApp/morphe-cli"
-integrations-source = "MorpheApp/revanced-integrations"
-rv-brand = "MorpheApp ReVanced"
 arch = "arm64-v8a"
 build-mode = "module"
